--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Test
 
 on:
   pull_request:
@@ -16,3 +16,4 @@ jobs:
       run: cargo check --verbose
     - name: Run tests
       run: cargo test --verbose
+
