--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,18 +11,18 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  release:
+  tag-repo:
+    uses: ./.github/workflows/tag.yml
+    with:
+      push-tag: true
+  release-crate:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Publish tag
-      uses: ./.github/workflows/tag.yml
-      with:
-        push-tag: true
     - uses: actions-rs/toolchain@v1
       with:
-          toolchain: stable
-          override: true
+        toolchain: stable
+        override: true
     - uses: katyo/publish-crates@v2
       with:
-          registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+        registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
