--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -22,6 +22,7 @@ jobs:
         echo "TAG_NAME=${TAG_NAME}" >> "${GITHUB_ENV}"
     - name: Validate tag
       run: |
+        git fetch --tags
         if git tag --list | grep -qF "${TAG_NAME}"; then
           echo "Tag ${TAG_NAME} is already in use" >&2
           exit 1
