--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,14 +19,10 @@ jobs:
       run: cargo check --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Check formatting
+      run: cargo fmt --check
   check-tag:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - run: |
-        find . -type f
-    - name: Check tag
-      uses: ./.github/workflows/tag.yml
-      with:
-        push-tag: false
+    uses: ./.github/workflows/tag.yml
+    with:
+      push-tag: false
 
