--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,11 @@
-name: Rust
+name: Test
 
 on:
   pull_request:
     branches: [ "main" ]
+
+permissions:
+  contents: read
 
 env:
   CARGO_TERM_COLOR: always
@@ -16,3 +19,10 @@ jobs:
       run: cargo check --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Check formatting
+      run: cargo fmt --check
+  check-tag:
+    uses: ./.github/workflows/tag.yml
+    with:
+      push-tag: false
+
