--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "derive-box-dyn"
 version = "0.1.0"
 edition = "2021"
+exclude = ["/.github/", ".*", "/tests/"]
+license-file = "./LICENSE"
+license = "Apache-2.0"
+repository = "https://github.com/fhke/derive-box-dyn"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
