add description to package

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 exclude = ["/.github/", ".*", "/tests/"]
 license-file = "./LICENSE"
+description = "Proc macro to convert struct to Box<dyn T>"
 license = "Apache-2.0"
 repository = "https://github.com/fhke/derive-box-dyn"
 
